--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,9 @@
 
 
 /*** common body & menu bar styles present in all pages ***/
+nav{
+ float: downer-center;
+}
 body {
     margin: 0;
     padding: 0;
