--- a/templates/boosters.html
+++ b/templates/boosters.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<!DOCTYPE html>
 <body>
     <div class="background"></div>
     <div class="balance-display" id="balanceDisplay"></div>
@@ -9,3 +10,4 @@
         <div class="boosters-box" id="questsBox"></div>
     </div>
 </body>
+</html>
