--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<!DOCTYPE html>
 <body>
     <div class="background"></div>
     <div class="balance-display" id="balanceDisplay"></div>
