--- a/templates/referral.html
+++ b/templates/referral.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<!DOCTYPE html>
 <body>
     <div class="background"></div>
     <div class="invite-box" id="inviteBox"></div>
