--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
   <head>
     <title>Alkashcoin</title>
     <link rel="stylesheet" href="styles.css">
   </head>
  
 <div class="menu-bar">
-        <div class="menu-item" id="wallet" style="--mask-url: none" onclick="index.html">
+        <div class="menu-item" id="wallet" style="--mask-url: none" onclick="location.href='index.html'">
             <img src="assets/wallet.webp" alt="wallet">
         </div>
         <div class="menu-item" id="boosters" style="--mask-url: none">
@@ -16,7 +15,7 @@
             <img src="assets/ranking.webp" alt="ranking">
             <div class="upcoming-tag">soon</div>
         </div>
-        <div class="menu-item" id="referral" style="--mask-url: none" onclick="referral.html">
+        <div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='referral.html'">
             <img src="assets/add_ref_menu.webp" alt="refer">
         </div>
 </div>
