--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
   <head>
     <title>Alkashcoin</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js" defer></script>
   </head>
  
 <div class="menu-bar">
