--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;  /* center vertically */
+    flex-direction: row;
+    align-items: down;  /* center vertically */
     justify-content: flex-start;  /* on top horizontally */
     height: 100vh;
     background: linear-gradient(to bottom right, #4b6cb7, #182848);
