--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,9 @@
+div{
+    display: flex; 
+}
+      
 
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;    
-    justify-content: flex-start;  /* on top horizontally */
-    height: 100vh;
-    background: linear-gradient(to bottom right, #17a589 , #239b56);
-    background-size: cover;
-    font-family: 'Ariel', sans-serif;
-    overflow: hidden;  /* disable scrolling */
+    font-family: 'Ariel', sans-serif;   
 }
 
-.background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* background layer */
-}
